feat: add Slider block

--- a/singolo1.html
+++ b/singolo1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="singolo1.css">
-    <title>Document</title>
+    <title>Singolo</title>
 </head>
 <body>
     <header class="head">
@@ -28,8 +28,24 @@
         </div>        
         <div class="line-head"></div>   
     </header>
-    <main>
-
+    <main class="slider">
+        <div class="wrapper">
+            <div class="left-arrow">
+                <a class="left-slide" href="#"><img src="./assets/Images/left-arrow.png" alt="arrow to slide left"></a>
+            </div>
+            <div class="slides">
+                <div class="vertical-phone">
+                    <img class="vertical_phone_source" src="./assets/Images/iPhone Vertical.png" alt="vertical phone">
+                </div>
+                <div class="horizontal-phone">
+                    <img class="horizontal_phone_source" src="./assets/Images/iPhone Horizontal.png" alt="horizontal phone">
+                </div>            
+            </div>
+            <div class="right-arrow">
+                <a class="right-slide" href="#"><img src="./assets/Images/right-arrow.png" alt="arrow to slide right"></a>
+            </div>
+        </div>        
+        <div class="line-main"></div>
     </main>
     <footer>
 
