--- a/singolo1.html
+++ b/singolo1.html
@@ -46,9 +46,67 @@
             </div>
         </div>        
         <div class="line-main"></div>
+        <div class="services">
+            <div class="services-about">
+                <h2 class="services-about-header">Our Services</h2>
+                <p class="services-about-p">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. 
+                    Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. 
+                    Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+                </p>
+            </div>            
+            <div class="services-opportunities">
+                <div class="services-opportunities-col">
+                    <div class="services-design">
+                        <img src="./assets/Images/pen.png" alt="pen">
+                        <div class="services-design-text">
+                            <h3 class="services-design-head">Custom Design</h3>
+                            <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                        </div>                        
+                    </div>
+                    <div class="services-layout">
+                        <img src="./assets/Images/phone_logo.png" alt="layout">
+                        <div class="services-layout-text">
+                            <h3>Responsive Layout</h3>
+                            <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>                    
+                        </div>
+                    </div>     
+                </div>
+                <div class="services-opportunities-col">
+                    <div class="services-ideas">
+                        <img src="./assets/Images/bulb.png" alt="bulb">
+                        <div class="services-ideas-text">
+                            <h3>Inovative Ideas</h3>
+                            <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                        </div>                        
+                    </div>
+                    <div class="services-support">
+                        <img src="./assets/Images/bubble.png" alt="bubble">
+                        <div class="services-support-text">
+                            <h3>24 / 7 Support</h3>
+                            <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem.</p>
+                        </div>                        
+                    </div>
+                </div>
+                <div class="services-opportunities-col">
+                    <div class="services-love">
+                        <img src="./assets/Images/heart.png" alt="heart">
+                        <div class="services-love-text">
+                            <h3>Love Is The Answer</h3>
+                            <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+                        </div>                        
+                    </div>
+                    <div class="services-star">
+                        <img src="./assets/Images/star.png" alt="heart">
+                        <div class="services-star-text">
+                            <h3>Feel Like A Star</h3>
+                            <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+                        </div>                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="line-services"></div>
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
 </body>
 </html>
