refactor: complete pixelPerfect

--- a/singolo1.html
+++ b/singolo1.html
@@ -35,10 +35,10 @@
             </div>
             <div class="slides">
                 <div class="vertical-phone">
-                    <img class="vertical_phone_source" src="./assets/Images/iPhone Vertical.png" alt="vertical phone">
+                    <img class="vertical_phone_source" src="./assets/Images/iPhone_Vertical.png" alt="vertical phone">
                 </div>
                 <div class="horizontal-phone">
-                    <img class="horizontal_phone_source" src="./assets/Images/iPhone Horizontal.png" alt="horizontal phone">
+                    <img class="horizontal_phone_source" src="./assets/Images/iPhone_Horizontal.png" alt="horizontal phone">
                 </div>            
             </div>
             <div class="right-arrow">
@@ -87,7 +87,7 @@
                         </div>                        
                     </div>
                 </div>
-                <div class="services-opportunities-col">
+                <div class="services-opportunities-col col-3">
                     <div class="services-love">
                         <img src="./assets/Images/heart.png" alt="heart">
                         <div class="services-love-text">
