--- a/singolo2.html
+++ b/singolo2.html
@@ -9,15 +9,60 @@
 </head>
 <body class="main">
     <section class="portfolio">
-        <article class="portfolio-text">
-            <h2 class="portfolio_head">Portfolio</h2>
-            <p class="portfolio_paragraph">
-                Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
-            </p>
-        </article>
-        <div class="portfolio_images">
-            
-        </div>
+        <div class="content">
+            <article class="portfolio-text">
+                <h2 class="portfolio_head">Portfolio</h2>
+                <p class="portfolio_paragraph">
+                    Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+                </p>
+            </article>
+            <div class="portfolio_images">
+                <div class="portfolio_images_buttons">
+                    <button>All</button>
+                    <button>Web Design</button>
+                    <button>Graphic Design</button>
+                    <button>Artwork</button>
+                </div>
+                <section class="portfolio_images_view">
+                    <figure>
+                        <img src="./assets/Images/portfolio_img (5).png" alt="boat">
+                    </figure>
+                    <figure>
+                        <img src="./assets/Images/portfolio_img (8).png" alt="ice_cream_girl">
+                    </figure>
+                    <figure>
+                        <img src="./assets/Images/portfolio_img (12).png" alt="city">
+                    </figure>
+                    <figure>
+                        <img src="./assets/Images/portfolio_img (7).png" alt="robot">
+                    </figure>
+                    <figure>
+                        <img src="./assets/Images/portfolio_img (6).png" alt="animals">
+                    </figure>
+                    <figure>
+                        <img src="./assets/Images/portfolio_img (11).png" alt="factory">
+                    </figure>
+                    <figure>
+                        <img src="./assets/Images/portfolio_img (9).png" alt="abstract">
+                    </figure>
+                    <figure>
+                        <img src="./assets/Images/portfolio_img (4).png" alt="chicken">
+                    </figure>
+                    <figure>
+                        <img src="./assets/Images/portfolio_img (2).png" alt="monster">
+                    </figure>
+                    <figure>
+                        <img src="./assets/Images/portfolio_img (10).png" alt="letter">
+                    </figure>
+                    <figure>
+                        <img src="./assets/Images/portfolio_img (3).png" alt="monster_2">
+                    </figure>
+                    <figure>
+                        <img src="./assets/Images/portfolio_img.png" alt="carpet">
+                    </figure>    
+                </section>
+            </div>
+        </div>        
     </section>
     <div class="line-portfolio"></div>
     <section class="about_us">
