feat: complete Singolo 2 part

--- a/singolo2.html
+++ b/singolo2.html
@@ -25,37 +25,37 @@
                 </div>
                 <section class="portfolio_images_view">
                     <figure>
-                        <img src="./assets/Images/portfolio_img (5).png" alt="boat">
+                        <img src="./assets/Images/portfolio_img_(5).png" alt="boat">
                     </figure>
                     <figure>
-                        <img src="./assets/Images/portfolio_img (8).png" alt="ice_cream_girl">
+                        <img src="./assets/Images/portfolio_img_(8).png" alt="ice_cream_girl">
                     </figure>
                     <figure>
-                        <img src="./assets/Images/portfolio_img (12).png" alt="city">
+                        <img src="./assets/Images/portfolio_img_(12).png" alt="city">
                     </figure>
                     <figure>
-                        <img src="./assets/Images/portfolio_img (7).png" alt="robot">
+                        <img src="./assets/Images/portfolio_img_(7).png" alt="robot">
                     </figure>
                     <figure>
-                        <img src="./assets/Images/portfolio_img (6).png" alt="animals">
+                        <img src="./assets/Images/portfolio_img_(6).png" alt="animals">
                     </figure>
                     <figure>
-                        <img src="./assets/Images/portfolio_img (11).png" alt="factory">
+                        <img src="./assets/Images/portfolio_img_(11).png" alt="factory">
                     </figure>
                     <figure>
-                        <img src="./assets/Images/portfolio_img (9).png" alt="abstract">
+                        <img src="./assets/Images/portfolio_img_(9).png" alt="abstract">
                     </figure>
                     <figure>
-                        <img src="./assets/Images/portfolio_img (4).png" alt="chicken">
+                        <img src="./assets/Images/portfolio_img_(4).png" alt="chicken">
                     </figure>
                     <figure>
-                        <img src="./assets/Images/portfolio_img (2).png" alt="monster">
+                        <img src="./assets/Images/portfolio_img_(2).png" alt="monster">
                     </figure>
                     <figure>
-                        <img src="./assets/Images/portfolio_img (10).png" alt="letter">
+                        <img src="./assets/Images/portfolio_img_(10).png" alt="letter">
                     </figure>
                     <figure>
-                        <img src="./assets/Images/portfolio_img (3).png" alt="monster_2">
+                        <img src="./assets/Images/portfolio_img_(3).png" alt="monster_2">
                     </figure>
                     <figure>
                         <img src="./assets/Images/portfolio_img.png" alt="carpet">
@@ -66,7 +66,57 @@
     </section>
     <div class="line-portfolio"></div>
     <section class="about_us">
-        
+        <div class="content">
+            <article class="about_text">
+                <h2 class="about_head">About Us</h2>
+                <p class="about_paragraph">
+                    Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, 
+                    nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, 
+                    tortor mauris condimentum nibh.
+                </p>
+            </article>
+            <div class="about_persons">
+                <div class="about_column">
+                    <img class="person_photo" src="./assets/Images/person_photo_1.png" alt="photo">
+                    <div class="about_information">
+                        <h3 class="person_name">Adam Jensen</h3>
+                        <p class="person_about">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                    </div>
+                    <div class="about_social_media">
+                        <a href="#"><img src="./assets/Images/social_facebook.png" alt="facebook link"></a>                
+                        <a href="#"><img src="./assets/Images/social_google.png" alt="google+ link"></a>                   
+                        <a href="#"><img src="./assets/Images/social_twitter.png" alt="twitter link"></a>                 
+                        <a href="#"><img src="./assets/Images/social_linkedin.png" alt="linkedin link"></a> 
+                    </div>
+                </div>
+                <div class="about_column">
+                    <img class="person_photo" src="./assets/Images/person_photo_2.png" alt="photo">
+                    <div class="about_information">
+                        <h3 class="person_name">Desmond Miles</h3>
+                        <p class="person_about">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                    </div>
+                    <div class="about_social_media">
+                        <a href="#"><img src="./assets/Images/social_facebook.png" alt="facebook link"></a>                 
+                        <a href="#"><img src="./assets/Images/social_google.png" alt="google+ link"></a>                   
+                        <a href="#"><img src="./assets/Images/social_twitter.png" alt="twitter link"></a>                 
+                        <a href="#"><img src="./assets/Images/social_linkedin.png" alt="linkedin link"></a> 
+                    </div>
+                </div>
+                <div class="about_column">
+                    <img class="person_photo" src="./assets/Images/person_photo_3.png" alt="photo">                    
+                    <div class="about_information">
+                        <h3 class="person_name">Scolara Visari</h3>
+                        <p class="person_about">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+                    </div>
+                    <div class="about_social_media">                        
+                        <a href="#"><img src="./assets/Images/social_facebook.png" alt="facebook link"></a>                 
+                        <a href="#"><img src="./assets/Images/social_google.png" alt="google+ link"></a>                   
+                        <a href="#"><img src="./assets/Images/social_twitter.png" alt="twitter link"></a>                 
+                        <a href="#"><img src="./assets/Images/social_linkedin.png" alt="linkedin link"></a>                       
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <div class="line-about_us"></div>
 </body>
