feat: complete Singolo 3 part

--- a/singolo3.html
+++ b/singolo3.html
@@ -18,10 +18,33 @@
                     tortor mauris condimentum nibh.
                 </p>
             </article>
-            <div class="contact_information">
-
-            </div>
-        </div>
+            <div class="quote_info_contact_wrapper">
+                <div class="contact_form_wrapper">
+                    <form class="contact_form" action="">
+                        <input class="contact_form_input input_name" type="text" placeholder="Name (Required)" pattern="^[а-яА-ЯеЁa-zA-Z]+$" required>
+                        <input class="contact_form_input input_mail" type="email" placeholder="Email (Required)" required>
+                        <input class="contact_form_input input_sbj" type="text" placeholder="Subject">
+                        <textarea class="contact_form_input input_text" name="contact_textarea" id="1" cols="0" rows="0" placeholder="Describe your project in detail..."></textarea>
+                        <button class="contact_form_btn" type="submit" formmethod="POST" formtarget="_self">Submit</button>
+                    </form>
+                </div>
+                <div class="contact_information">
+                    <div class="contact_information_text">
+                        <h3>Contact Information</h3>
+                        <p>
+                            Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. 
+                            Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, 
+                            et consequat felis.
+                        </p>
+                    </div>
+                    <div class="contact_information_contacts">
+                        <a class="contacts_link link_loc" href="https://goo.gl/maps/ZDk1Z2UVJQiatZ4t5"><img class="contacts_img img_loc" src="./assets/Images/contact_location.png" alt="location">Elm St. 14/05 Lost City</a>
+                        <a class="contacts_link link_phone" href="tel:+35283318635"><img class="contacts_img img_phone" src="./assets/Images/contact_phone.png" alt="phone">03528 331 86 35</a>
+                        <a class="contacts_link link_mail" href="mailto:info@singolo.com"><img class="contacts_img img_mail" src="./assets/Images/contact_mail.png" alt="mail">info@singolo.com</a>
+                    </div>
+                </div>
+            </div>        
+        </div>      
     </section>
     <div class="line_quote"></div>
     <footer class="footer">
