refactor: pixelperfect fix

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>        
         <div class="line-head"></div>   
     </header>
-    <main class="slider">
-        <div class="wrapper">
+    <main class="wrapper">
+        <section class="slider">
             <div class="left-arrow">
                 <a class="left-slide" href="#"><img src="./assets/Images/left-arrow.png" alt="arrow to slide left"></a>
             </div>
@@ -44,67 +44,69 @@
             <div class="right-arrow">
                 <a class="right-slide" href="#"><img src="./assets/Images/right-arrow.png" alt="arrow to slide right"></a>
             </div>
-        </div>        
+        </section>        
         <div class="line-main"></div>
-        <div class="services">
-            <div class="services-about">
-                <h2 class="services-about-header">Our Services</h2>
-                <p class="services-about-p">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. 
-                    Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. 
-                    Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
-                </p>
-            </div>            
-            <div class="services-opportunities">
-                <div class="services-opportunities-col">
-                    <div class="services-design">
-                        <img src="./assets/Images/pen.png" alt="pen">
-                        <div class="services-design-text">
-                            <h3 class="services-design-head">Custom Design</h3>
-                            <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
-                        </div>                        
-                    </div>
-                    <div class="services-layout">
-                        <img src="./assets/Images/phone_logo.png" alt="layout">
-                        <div class="services-layout-text">
-                            <h3>Responsive Layout</h3>
-                            <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>                    
+        <section class="services">
+            <div class="content">
+                <div class="services-about">
+                    <h2 class="services-about-header">Our Services</h2>
+                    <p class="services-about-p">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. 
+                        Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. 
+                        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+                    </p>
+                </div>            
+                <div class="services-opportunities">
+                    <div class="services-opportunities-col">
+                        <div class="services-design">
+                            <img src="./assets/Images/pen.png" alt="pen">
+                            <div class="services-design-text">
+                                <h3 class="services-design-head">Custom Design</h3>
+                                <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                            </div>                        
                         </div>
-                    </div>     
+                        <div class="services-layout">
+                            <img src="./assets/Images/phone_logo.png" alt="layout">
+                            <div class="services-layout-text">
+                                <h3>Responsive Layout</h3>
+                                <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>                    
+                            </div>
+                        </div>     
+                    </div>
+                    <div class="services-opportunities-col">
+                        <div class="services-ideas">
+                            <img src="./assets/Images/bulb.png" alt="bulb">
+                            <div class="services-ideas-text">
+                                <h3>Inovative Ideas</h3>
+                                <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                            </div>                        
+                        </div>
+                        <div class="services-support">
+                            <img src="./assets/Images/bubble.png" alt="bubble">
+                            <div class="services-support-text">
+                                <h3>24 / 7 Support</h3>
+                                <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem.</p>
+                            </div>                        
+                        </div>
+                    </div>
+                    <div class="services-opportunities-col col-3">
+                        <div class="services-love">
+                            <img src="./assets/Images/heart.png" alt="heart">
+                            <div class="services-love-text">
+                                <h3>Love Is The Answer</h3>
+                                <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+                            </div>                        
+                        </div>
+                        <div class="services-star">
+                            <img src="./assets/Images/star.png" alt="heart">
+                            <div class="services-star-text">
+                                <h3>Feel Like A Star</h3>
+                                <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+                            </div>                        
+                        </div>
+                    </div>
                 </div>
-                <div class="services-opportunities-col">
-                    <div class="services-ideas">
-                        <img src="./assets/Images/bulb.png" alt="bulb">
-                        <div class="services-ideas-text">
-                            <h3>Inovative Ideas</h3>
-                            <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
-                        </div>                        
-                    </div>
-                    <div class="services-support">
-                        <img src="./assets/Images/bubble.png" alt="bubble">
-                        <div class="services-support-text">
-                            <h3>24 / 7 Support</h3>
-                            <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem.</p>
-                        </div>                        
-                    </div>
-                </div>
-                <div class="services-opportunities-col col-3">
-                    <div class="services-love">
-                        <img src="./assets/Images/heart.png" alt="heart">
-                        <div class="services-love-text">
-                            <h3>Love Is The Answer</h3>
-                            <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
-                        </div>                        
-                    </div>
-                    <div class="services-star">
-                        <img src="./assets/Images/star.png" alt="heart">
-                        <div class="services-star-text">
-                            <h3>Feel Like A Star</h3>
-                            <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
-                        </div>                        
-                    </div>
-                </div>
-            </div>
-        </div>
+            </div>            
+        </section>
         <div class="line-services"></div>
         <section class="portfolio">
             <div class="content">
