--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">    
     <title>Singolo</title>
 </head>
 <body>
@@ -268,5 +268,6 @@
             <a href="#"><img src="./assets/Images/social_linkedin.png" alt="linkedin link"></a>
         </div>        
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
